--- a/acme/package.json
+++ b/acme/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.29"
   },
